# RAG

./: .gitignore  README.md  a.py  config.py  ingestion.py  main.py  online_lookup.py  pyproject.toml  rag_pipeline.py  requirements.txt  streamlit_app.py
test_docs/: text1.txt
utils/: doc_loader.py  summarizer.py
